--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.7.5"
+dotenv = "0.15.0"
+maud = { version = "0.26.0", features = ["axum"] }
+postgrest = "1.6.0"
+serde = { version = "1.0.198", features = ["derive"] }
+serde_json = "1.0.116"
+tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
+tower-http = { version = "0.5.2", features = ["fs"] }
